--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "prisma": "^7.0.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.1",
+    "dotenv": "^17.2.3",
+    "pg": "^8.16.3"
   }
 }
